# mcpelauncher-motion-blur

./: .clang-format  CMakeLists.txt  README.md  map.txt
src/: gamewindow.hpp  main.cpp  menu.hpp  motionblur.cpp  motionblur.hpp
